@@ -1,3 +1,8 @@
+2003-04-02  Andrew Lunn  <andrew.lunn@ascom.ch>
+
+	* src/dhcp_prot.c (do_dhcp_down_net): SIOCGLIFADDR and SIOCDLIFADDR
+	take if_laddrreq not ifreq. This caused stack corruption.
+
 2003-03-21  Nick Garnett  <nickg@balti.calivar.com>
 
 	* include/network.h: Added include of pkgconf/io_eth_drivers.h
